--- a/.classpath
+++ b/.classpath
@@ -30,6 +30,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/JAVA_JARS/gson-2.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/JAVA_JARS/gson-2.2.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
